--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -9,7 +9,7 @@
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-  <script src="/server.js"></script>
+  <script src="./server.js"></script>
     <title>Document</title>
 
 
