changes for hyperlink

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -19,7 +19,7 @@
         <hr class="my-4">
         <h4>Answer a few basic questions.</h4>
         <h4>Then find the friend with the greatest compatibility!</h4>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="/app/public/survey.html" role="button">Learn more</a>
     
 </div>
 
