--- a/app/public/home.html
+++ b/app/public/home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="./server.js"></script>
     <title>Document</title>
 
 
@@ -15,11 +14,11 @@
         <div class="container">
 <div class="jumbotron">
     
-        <h1 class="display-4">Celebrity Friend Finder</h1>
+        <h1 class="display-4">Friend Finder</h1>
         <hr class="my-4">
         <h4>Answer a few basic questions.</h4>
         <h4>Then find the friend with the greatest compatibility!</h4>
-        <a class="btn btn-primary btn-lg" href="survey.html" role="button">Learn more</a>
+        <a class="btn btn-primary btn-lg" href="survey" role="button">Learn more</a>
     
 </div>
 
