--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                       <label for="formGroupExampleInput2">Link to Photo Image (Required)</label>
-                      <input type="text" class="form-control" id="image-link">
+                      <input type="text" class="form-control" id="photo">
                     </div>
             
                 <h3 class="mb-2 mt-3">Question 1 </h3>
@@ -175,7 +175,7 @@
 //$('#myModal').modal('toggle');
 
 
-$("button").on("click", function(event) {
+$("#submit").on("click", function(event) {
     event.preventDefault();
     var user = {
           name: $("#name").val(),
@@ -199,7 +199,7 @@ $("button").on("click", function(event) {
 
         if (data) {
           alert("Yay! You are officially booked!");
-          console.log(user);
+          console.log(data);
         }
 
         else {
